--- a/WEB-1k-PD-22112024/about.html
+++ b/WEB-1k-PD-22112024/about.html
@@ -16,7 +16,7 @@
     </p>
     <h2>Kāpēc es vēlos kļūt par programmētaju?</h2>
     <ul>
-        <li>Mani tas interesē</li>
+        <li>Man tas interesē</li>
         <li>Rada iespēju gūt labi apmaksātu darbu</li>
         <li>Jo patīk</li>
     </ul>
